Change DB Server to MySQL

--- a/src/main/resources/util.properties
+++ b/src/main/resources/util.properties
@@ -1,10 +1,10 @@
 site.maintenance=false
 
 #MYSQL Specific properties
-jdbc.driverClass=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1/
-jdbc.username=production username
-jdbc.password=production password
+jdbc.driverClass=com.mysql.cj.jdbc.Driver
+jdbc.url=jdbc:mysql://ua-tsd:3306/testdb
+jdbc.username=admin
+jdbc.password=x4elklma
 
 #HSQLDB Specific properties
 jdbc.hsqldb.driverClass=org.hsqldb.jdbcDriver
